feat: initialize application architecture with core admin, staff, and user routes, server-sent events, and backend service modules